# ClaudeDevBot

./: .gitignore  CLAUDE.md  README.md  claudebot  pyproject.toml  telegram_claude_bot.py
.claudebot/: __init__.py  cli.py  config.yaml  pyproject.toml  requirements.txt
.claudebot/agents/: __init__.py  base_agent.py
.claudebot/api/: server.py
.claudebot/api/routes/: __init__.py  health.py  tasks.py
.claudebot/db/: __init__.py  models.py
.claudebot/orchestrator/: __init__.py  task_manager.py
.claudebot/tools/: __init__.py  claude_cli.py  git_tools.py
.devbot/: code_graph.json  config.yaml  devbot_state.json  project_profile.json
ai-devbot/: README.md  __init__.py  requirements.txt  run_bot.sh
ai-devbot/agents/: base_agent.py  code_agent.py  debug_agent.py  deploy_agent.py  planner_agent.py  spec_agent.py  test_agent.py
ai-devbot/bot/: telegram_bot.py
ai-devbot/config/: __init__.py  config.yaml
ai-devbot/data/memory/long_term/: README.md  feature_payment.json  index.json
ai-devbot/data/memory/short_term/: README.md
ai-devbot/docs/: architecture.md
ai-devbot/events/: event_bus.py  event_types.py
ai-devbot/guardrails/: command_validation.py  permissions.py
ai-devbot/memory/: __init__.py
ai-devbot/observability/: dashboard.py  logging.py  metrics.py  tracing.py
ai-devbot/openspec/: __init__.py
ai-devbot/openspec/context/: project.md
ai-devbot/openspec/features/: feature-template.md  payment-service.md
ai-devbot/orchestrator/: __init__.py  orchestrator.py  task_queue.py
ai-devbot/spec/: api.yaml  architecture.md  product.md  test_specification.md
ai-devbot/spec_engine/: spec_graph.py
ai-devbot/tests/: test_agents.py  test_workflows.py
ai-devbot/tools/: claude_cli.py  git_tools.py  telegram_api.py  tool.py  tool_registry.py
ai-devbot/workflows/: __init__.py  command_router.py  error_recovery.py  examples.py  orchestration.py  task_planner.py
claudebot/: .claudebotrc.example  cli.py  config.py  pyproject.toml
claudebot/agents/: base_agent.py  code_agent.py  debug_agent.py  planner_agent.py  task_graph.py
claudebot/api/: __init__.py  rate_limit.py  server.py
claudebot/api/routes/: health.py  tasks.py  telegram.py  telegram_polling.py  websocket.py
claudebot/cli_commands/commands/: config.py  init.py
claudebot/db/: models.py
claudebot/graph/: symbol_parser.py
claudebot/memory/: short_term_memory.py
claudebot/observability/: __init__.py
claudebot/orchestrator/: __init__.py  executor.py
claudebot/scanner/: stack_detector.py
claudebot/spec/: __init__.py  spec_generator.py
claudebot/tools/: __init__.py  claude_cli.py  git_tools.py  tool.py  tool_registry.py
devbot/: ARCHITECTURE.md  README.md  __init__.py  requirements.txt  setup.py
devbot/agents/: __init__.py  base_agent.py  code_agent.py  deploy_agent.py  planner_agent.py  test_agent.py
devbot/cli/: __init__.py  devbot_cli.py
devbot/core/: __init__.py  devbot_core.py
devbot/graph/: __init__.py  code_graph_builder.py  symbol_parser.py
devbot/integrations/: __init__.py  telegram_bot.py
devbot/memory/: __init__.py  long_term_memory.py  memory.py  short_term_memory.py
devbot/observability/: __init__.py  tracing.py
devbot/orchestrator/: __init__.py  executor.py  task_graph.py
devbot/scanner/: __init__.py  project_scanner.py  stack_detector.py
devbot/spec/: __init__.py  openspec_sync.py  spec_generator.py
devbot/tools/: __init__.py  claude_cli.py  git_tools.py  tool_registry.py
docs/: claude_telegram_devbot_proposal.md
docs/superpowers/plans/: 2026-03-17-claudebot-plugin-plan.md
docs/superpowers/specs/: 2026-03-16-embedded-library-design.md  2026-03-17-claudebot-plugin-design.md
openspec/context/: project.md
openspec/features/: payment-service.md
openspec/plans/: payment-service-plan.md
src/: pyproject.toml
src/claudebot/: README.md  __main__.py  config.py  config.yaml  pyproject.toml  requirements.txt
src/claudebot/agents/: __init__.py  deploy_agent.py  planner_agent.py  spec_agent.py  test_agent.py
src/claudebot/api/: auth.py  enums.py
src/claudebot/api/routes/: __init__.py  tasks.py  telegram.py  telegram_polling.py
src/claudebot/cli/: __init__.py
src/claudebot/cli_commands/: __init__.py
src/claudebot/core/: __init__.py
src/claudebot/db/: tasks.db
src/claudebot/graph/: __init__.py  code_graph_builder.py
src/claudebot/memory/: __init__.py  long_term_memory.py  memory.py
src/claudebot/observability/: logger.py  tracing.py
src/claudebot/orchestrator/: executor.py  task_manager.py
src/claudebot/scanner/: __init__.py  project_scanner.py
src/claudebot/spec/: openspec_sync.py
src/claudebot/tools/: __init__.py  claude_cli.py
src/tests/: conftest.py  test_agents.py  test_tools.py
